deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memo-api-deployment
spec:
  replicas: 2 # 👈 시작부터 Pod를 2개 띄워봅니다.
  selector:
    matchLabels:
      app: memo-api # 이 Deployment가 관리할 Pod를 찾는 꼬리표
  template: # Pod를 어떻게 만들지에 대한 설계도 ('Pod 템플릿')
    metadata:
      labels:
        app: memo-api # Pod에 붙여줄 꼬리표 (위 selector와 일치!)
    spec:
      containers:
        - name: memo-api-container
          image: 423458036718.dkr.ecr.ap-northeast-2.amazonaws.com/my-spring-app:latest
          ports:
            - containerPort: 8080
