service.yml
apiVersion: v1
kind: Service
metadata:
  name: memo-api-service
spec:
  # 👇 type이 LoadBalancer로 되어 있는지 확인
  type: NodePort
  selector:
    app: memo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
